--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,19 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+.copy {
+  background-color: #3af043;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 12px 24px;
+  text-align: center;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  visibility: hidden;
+}
+
